syntax = "proto3";

package dozer.app_ui;
import "google/protobuf/empty.proto";

service CodeService {  
  rpc AppUIConnect(google.protobuf.Empty) returns (stream ConnectResponse);
  rpc Run(RunRequest) returns (Labels);
  rpc Stop(google.protobuf.Empty) returns (google.protobuf.Empty);
}

message Labels {
  repeated Label labels = 1;
}

message Label {
  string key = 1;
  string value = 2;
}

message AppUI {
  string app_name = 1;
  repeated string connections = 2;  
  repeated string sink_names = 3;
  bool enable_api_security = 4;
}

message AppUIResponse {
  bool initialized = 1;
  bool running = 2;
  optional string error_message = 3;
  AppUI app = 4;
}

message RunRequest {
  oneof request {
    RunSqlRequest sql = 1;
    RunSourceRequest source = 2;
  }
}
message RunSqlRequest {
  string sql = 1;
}

message RunSourceRequest {
  string source = 1;
}

message ProgressResponse {
  map<string, Metric> progress = 1;
}

message Metric {
  uint32 value = 1;
  map<string, string> labels = 2;
  uint32 ts = 3;
}
message ConnectResponse {
  AppUIResponse app_ui = 1;
  BuildResponse build = 2;
}

message BuildResponse {
  BuildStatus status = 1;
  optional string message = 2;
}
enum BuildStatus {
  BUILD_START = 0; 
  BUILD_FAILED = 1; 
}